# css-in-js

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MONOREPO_ANALYSIS.md  NATIVE_PARSER_ANALYSIS.md  QA-REVIEW-AND-IMPROVEMENTS.md  README.md  RUST_OPTIMIZATION_PHASE_2.md  SETUP.md  VALIDATION_REPORT_2026-04-09.md  package.json  tsconfig.base.json  tsconfig.build.json  tsconfig.dev.json  tsconfig.json  tsup.config.ts
.github/workflows/: benchmark.yml  build-matrix.yml  example-next-app.yml  plugin-registry-benchmark.yml  plugin-registry-test.yml  quality.yml  release-candidate-gate.yml  test-coverage.yml
docs/: CRITIQUE-20.md  TYPE-MAPPING-ANALYSIS.md  architecture.md  dependency-matrix.md  examples.md  faq.md  fix-release-candidate-gate.md  getting-started.md  implementation-gap-audit-2026-04-06.md  master-list-unimplemented-2026-04-07.md  migration.md  npm-publish-guide.md  plugin-registry.md  status-dashboard.md  testing-status-note.md  v5.0.0_sprint-a-b-c-d.md
docs/known-limitations/: fix-cli.md  know-tw-syntax.md  known-tw-animate.md  known-tw-atomic.md  known-tw-compiler.md  known-tw-dashboard.md  known-tw-devtools.md  known-tw-engine.md  known-tw-native.md  known-tw-next.md  known-tw-plugin-registry.md  known-tw-plugin.md  known-tw-preset.md  known-tw-rspack.md  known-tw-runtime-css.md  known-tw-runtime.md  known-tw-scanner.md  known-tw-shared.md  known-tw-storybook-addon.md  known-tw-studio-desktop.md  known-tw-svelte.md  known-tw-testing.md  known-tw-theme.md  known-tw-vite.md  known-tw-vscode.md  known-tw-vue.md
docs/ops/: daily-standup-template.md  plugin-registry-track-b-issues.md  sprint1-launch-checklist.md  status-upgrade-playbook.md
examples/next-js-app/: README.md
examples/nextjs-v5/: README.md  package.json
examples/vite-v5/: README.md  package.json
native/: Cargo.toml  README.md  napi.config.json
native/json-schemas/: AnalyzerReport.json  ParsedClass.json  RouteClassMap.json  ScanResult.json  TransformResult.json
native/src/: ast_optimizer.rs  lib.rs  oxc_parser.rs
native/src/integrations/: exports.rs  mod.rs
native/src/lightning/: cache.rs  compiler.rs  minifier.rs  mod.rs
native/src/tailwind/: compiler.rs  config.rs  database.rs  mod.rs
plans/: PLAN.md  compiler-v5-upgrade-plan.md  let-locations-report.md  monorepo-restructure-v2-checklist.md  monorepo-restructure-v2-execution-log.md  monorepo-restructure-v2-package-breakdown.md  remove-js-fallback-native-only.md  zero-everything.md  zero-let-final.md  zero-let-remaining.md  zero-let-scanner.md
scripts/: check-binary-size.mjs  check-pack-artifacts.mjs  check-pack-artifacts.ts  check-umbrella-exports.ts  generate-json-schemas.ts  validate-canary.mjs  version-sync.ts
scripts/benchmark/: sprint2-bench.mjs
scripts/smoke/: index.ts
scripts/v45/: cache.mjs  cache.test.mjs  sync.test.mjs  sync.ts
(+28 files in other folders)
