[package]
name = "tailwind_styled_parser"
version = "5.0.0"
edition = "2021"
description = "Native Rust engine for tailwind-styled-v5"

[lib]
# cdylib  → .node file for Node.js N-API
# staticlib → optional, for C ABI consumers (bindings/)
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
# Regex engine — used for class tokenisation, tw detection, RSC analysis
regex = "1"
# Once-cell for lazy static regex compilation (avoid recompiling on every call)
once_cell = "1"
dashmap = "6.1.0"
notify = "6"
# ─ OPTIMIZATION (Phase 2): Parallel iterators for workspace scanning
rayon = "1.7"
num_cpus = "1.16"
# ─ OPTIMIZATION (Phase 3): AST-based template detection
# NOTE: oxc_parser 0.1 is old. Upgrade target: ~0.49 for visitor API + semantic analysis
# See QA #23 for upgrade plan. For now, keeping 0.1 for stability.
oxc_parser = "0.1"
oxc_allocator = "0.1"
oxc_ast = "0.1"
oxc_span = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# schemars: used for JSON Schema generation (export-schemas binary)
# Required by generate-json-schemas.ts pipeline (PLAN.md Wave 1)
schemars = "0.8"

[build-dependencies]
napi-build = "1"

[profile.release]
# opt-level "z" — optimize for binary size (QA #21 fix: was 3 which is speed-only)
# Reduces .node file size by 2-5MB vs opt-level=3 with minimal perf impact
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Speed-optimized dev builds for faster iteration
opt-level = 1

[profile.test]
# Faster test builds
opt-level = 1

[[bin]]
name = "export-schemas"
path = "src/bin/export_schemas.rs"
